--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   sqflite: ^2.4.2
   path: ^1.9.1
   path_provider: ^2.1.5
+  flutter_contacts: ^1.1.9+2
+  permission_handler: ^12.0.0+1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
