--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,25 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# FVM Version Cache
+.fvm/
+
+# Firebase configuration files
+firebase.json
+android/app/google-services.json
+lib/firebase_options.dart
+
+# Android-specific generated drawables and value folders
+android/app/src/main/res/drawable-hdpi/
+android/app/src/main/res/drawable-mdpi/
+android/app/src/main/res/drawable-night-hdpi/
+android/app/src/main/res/drawable-night-mdpi/
+android/app/src/main/res/drawable-night-xhdpi/
+android/app/src/main/res/drawable-night-xxhdpi/
+android/app/src/main/res/drawable-night-xxxhdpi/
+android/app/src/main/res/drawable-xhdpi/
+android/app/src/main/res/drawable-xxhdpi/
+android/app/src/main/res/drawable-xxxhdpi/
+android/app/src/main/res/values-night-v31/
+android/app/src/main/res/values-v31/
