--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,12 @@ dependencies:
   open_file: ^3.5.10
   flutter_file_dialog: ^3.0.2
   shared_preferences: ^2.5.3
+  flutter_launcher_icons: ^0.14.3
+  flutter_native_splash: ^2.4.6
+  #firebase related
+  firebase_core: ^3.13.1
+  firebase_auth: ^5.5.4
+  google_sign_in: ^6.3.0
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +66,25 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/splash.png"
+
+
+flutter_native_splash:
+  image: assets/icons/splash.png
+  android: true
+  ios: true
+  color: "#FFFFFF"
+  android_12:
+    image: assets/icons/splash.png
+    icon_background_color: "#FFFFFF"
+  fullscreen: true
+
+
 
 # The following section is specific to Flutter packages.
 flutter:
