--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   firebase_core: ^3.13.1
   firebase_auth: ^5.5.4
   google_sign_in: ^6.3.0
+  cloud_firestore: ^5.6.8
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
