--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   google_sign_in: ^6.3.0
   cloud_firestore: ^5.6.8
   uuid: ^4.5.1
+  connectivity_plus: ^6.1.5
+  internet_connection_checker_plus: ^2.7.2
 
 dev_dependencies:
   flutter_test:
